# singular

./: Cargo.toml
benches/: baby_pedersen_hash.rs  pedersen_hash.rs
examples/: bench.rs
src/: baby_group_hash.rs  baby_pedersen_hash.rs  eddsa.rs  group_hash.rs  interpolation.rs  lib.rs  pedersen_hash.rs  redbabyjubjub.rs  redjubjub.rs  util.rs
src/alt_babyjubjub/: fs.rs  mod.rs  tests.rs
src/babyjubjub/: edwards.rs  fs.rs  mod.rs  tests.rs
src/circuit/: as_waksman.rs  baby_ecc.rs  baby_eddsa.rs  baby_pedersen_hash.rs  blake2s.rs  boolean.rs  ecc.rs  expression.rs  float_point.rs  lookup.rs  mod.rs  multieq.rs  multipack.rs  num.rs  pedersen_hash.rs  polynomial_lookup.rs  rescue.rs  sha256.rs  shark_mimc.rs  uint32.rs
src/circuit/sapling/: mod.rs
src/circuit/sprout/: commitment.rs  input.rs  mod.rs  output.rs  prfs.rs
src/circuit/test/: all_zeroes_catcher.rs  counting.rs  density_counting.rs  duplicate_lc_finder.rs  find_unconstrained.rs  mod.rs
src/jubjub/: edwards.rs  fs.rs  mod.rs  montgomery.rs
src/primitives/: mod.rs
src/rescue/: mod.rs
src/rescue/bn256/: mod.rs
